--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,10 +5,21 @@ on:
     branches: [ "main" ]
   schedule:
     - cron: '0 0 * * *'
+  workflow_dispatch:
+    inputs:
+      package_name:
+        description: "Custom package name (e.g. com.example.app). Leave empty to use seed/random."
+        required: false
+        type: string
+        default: ""
+      artifact_name:
+        description: "Artifact name (optional)."
+        required: false
+        type: string
+        default: "rvxp-ci-release-apk"
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -31,23 +42,47 @@ jobs:
       run: echo "NUMBER=$(shuf -i 1-10000 -n 1)" >> $GITHUB_OUTPUT
 
     - name: Build Release
-      run: ./gradlew assembleUniversalRelease -PPACKAGE_NAME_SEED=${{ steps.random.outputs.NUMBER }}
+      shell: bash
+      run: |
+        set -e
+
+        GRADLE_ARGS="-PPACKAGE_NAME_SEED=${{ steps.random.outputs.NUMBER }}"
+
+        # If manually triggered and input provided, override package name
+        if [[ "${{ github.event_name }}" == "workflow_dispatch" && -n "${{ inputs.package_name }}" ]]; then
+          echo "Using custom package name: ${{ inputs.package_name }}"
+          GRADLE_ARGS="$GRADLE_ARGS -PPACKAGE_NAME=${{ inputs.package_name }}"
+        else
+          echo "Using seeded/random package name (seed=${{ steps.random.outputs.NUMBER }})"
+        fi
+
+        ./gradlew assembleUniversalRelease $GRADLE_ARGS
 
     - name: Upload a Release Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: rvxp-ci-release-apk
+        name: ${{ github.event_name == 'workflow_dispatch' && inputs.artifact_name || 'rvxp-ci-release-apk' }}
         path: |
           app/build/outputs/apk/universal/release
           app/build/outputs/mapping/universalRelease/mapping.txt
 
     - name: Create AutoBuild Release
+      shell: bash
       run: |
+        set -e
+
         GIT_DESCRIBE=$(git rev-parse --short HEAD)
         GIT_COMMIT_DATE=$(git log -1 --format=%cd --date=format:%y%m%d)
+
         cd app/build/outputs/apk/universal/release/
-        mv app-universal-release.apk ReVancedXposedSpotify-${GIT_COMMIT_DATE}.apk
+
+        OUT_NAME="ReVancedXposedSpotify-${GIT_COMMIT_DATE}.apk"
+        mv app-universal-release.apk "$OUT_NAME"
+
         gh release delete autobuild --yes || true
-        gh release create autobuild ReVancedXposedSpotify-${GIT_COMMIT_DATE}.apk --latest --title "Build ${GIT_COMMIT_DATE}" --notes "Commit ${GIT_DESCRIBE}. The package name and signature of this build are different every day. You don't have to reinstall it every day."
+        gh release create autobuild "$OUT_NAME" \
+          --latest \
+          --title "Build ${GIT_COMMIT_DATE}" \
+          --notes "Commit ${GIT_DESCRIBE}. The package name and signature of this build are different every day. You don't have to reinstall it every day."
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
